--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -31,10 +31,24 @@
         <li class="bold">
             <ul class="collapsible collapsible-accordion">
                 <li>
+                    <a class="collapsible-header" ><i class="petite material-icons">business</i>Main Companies<i class="material-icons right extend-menu">arrow_drop_down</i></a>
+                    <div class="collapsible-body">
+                        <ul>
+                            <li class="sub-menu"><a th:href="@{/maincompany/}">All</a></li>
+                            <li class="sub-menu"><a th:href="@{/maincompany/add/}">Add</a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </li>
+        <!--DropDown-->
+        <li class="bold">
+            <ul class="collapsible collapsible-accordion">
+                <li>
                     <a class="collapsible-header" href="#"><i class="petite material-icons">business</i>Companies<i class="material-icons right">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
-                            <li class="sub-menu"><a href="#!">Check All</a></li>
+                            <li class="sub-menu"><a href="#!">All</a></li>
                             <li class="sub-menu"><a href="#!">Find one</a></li>
                         </ul>
                     </div>
