--- a/src/main/resources/templates/editMainCompany.html
+++ b/src/main/resources/templates/editMainCompany.html
@@ -5,7 +5,7 @@
 <div th:replace="common/header :: header"></div>
 <main>
     <!--/*@thymesVar id="MainCompany" type="de.onetwotree.margaux.entity.MainCompany"*/-->
-    <form action="#" th:object="${MainCompany}" method="post">
+    <form action="#" th:action="@{/maincompany/add/}" th:object="${MainCompany}" method="post">
         <input type="text" th:field="*{name}" required="required" />
         <input type="submit" />
     </form>
