Inserting MainCompany Done

--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -48,8 +48,8 @@
                     <a class="collapsible-header" href="#"><i class="petite material-icons">business</i>Companies<i class="material-icons right">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
-                            <li class="sub-menu"><a href="#!">All</a></li>
-                            <li class="sub-menu"><a href="#!">Find one</a></li>
+                            <li class="sub-menu"><a th:href="@{/company/}">All</a></li>
+                            <li class="sub-menu"><a href="#!">Add</a></li>
                         </ul>
                     </div>
                 </li>
