--- a/src/main/resources/templates/editMainCompany.html
+++ b/src/main/resources/templates/editMainCompany.html
@@ -4,11 +4,34 @@
 <div th:replace="common/head :: head"></div>
 <div th:replace="common/header :: header"></div>
 <main>
-    <!--/*@thymesVar id="MainCompany" type="de.onetwotree.margaux.entity.MainCompany"*/-->
-    <form action="#" th:action="@{/maincompany/add/}" th:object="${MainCompany}" method="post">
-        <input type="text" th:field="*{name}" required="required" />
-        <input type="submit" />
-    </form>
+    <div class="row">
+        <div class="col l12 m12 s12">
+            <div class="panel6">
+                <div class="panel_title">
+                    <h2>Add a Main Companies</h2>
+                </div>
+                <!--/*@thymesVar id="MainCompany" type="de.onetwotree.margaux.entity.MainCompany"*/-->
+                <form action="#" th:action="@{/maincompany/add/}" th:object="${MainCompany}" method="post" class="col s12">
+                    <div class="row">
+                        <div class="input-field col l6 m6 s12">
+                            <input placeholder="Ex: SuperCompany GmbH" id="mainCompanyName" type="text" class="validate" th:field="*{name}" required="required" />
+                            <label for="mainCompanyName">Company Name</label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="input-field col l6 m6 s12">
+                            <select th:field="*{manager}" class="input-field">
+                                <option id="manager" th:each="user: ${users}" th:value="${user.id}" th:text="${user.firstname}"></option>
+                            </select>
+                            <label for="manager">Manager</label>
+                        </div>
+                    </div>
+
+                    <input class="waves-effect waves-light btn" type="submit" />
+                </form>
+            </div>
+        </div>
+    </div>
 </main>
 
 <div th:replace="common/footer :: footer"></div>
