--- a/src/main/resources/templates/editMainCompany.html
+++ b/src/main/resources/templates/editMainCompany.html
@@ -14,7 +14,7 @@
                 <form action="#" th:action="@{/maincompany/add/}" th:object="${MainCompany}" method="post" class="col s12">
                     <div class="row">
                         <div class="input-field col l6 m6 s12">
-                            <input placeholder="Ex: SuperCompany GmbH" id="mainCompanyName" type="text" class="validate" th:field="*{name}" required="required" />
+                            <input id="mainCompanyName" type="text" class="validate" th:field="*{name}" required="required" />
                             <label for="mainCompanyName">Company Name</label>
                         </div>
                     </div>
