Project DAO and Service started...

--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -49,7 +49,7 @@
                     <div class="collapsible-body">
                         <ul>
                             <li class="sub-menu"><a th:href="@{/company/}">All</a></li>
-                            <li class="sub-menu"><a href="#!">Add</a></li>
+                            <li class="sub-menu"><a th:href="@{/company/add/}">Add</a></li>
                         </ul>
                     </div>
                 </li>
@@ -63,7 +63,7 @@
                     <a class="collapsible-header" href="#"><i class="petite material-icons">work</i>Projects<i class="material-icons right">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
-                            <li class="sub-menu"><a href="#!">Check All</a></li>
+                            <li class="sub-menu"><a th:href="@{/project/}">All</a></li>
                             <li class="sub-menu"><a href="#!">Find one</a></li>
                         </ul>
                     </div>
