--- a/src/main/resources/templates/mainCompany.html
+++ b/src/main/resources/templates/mainCompany.html
@@ -23,7 +23,7 @@
                             <tr th:each="maincompany : ${MainCompanies}">
                                     <td th:text="${maincompany.id}">undefined</td>
                                     <td th:text="${maincompany.name}">undefined</td>
-                                    <td th:text="${maincompany.manager.email}">undefined</td>
+                                    <td th:text="${maincompany.manager.firstname} + ' ' + ${maincompany.manager.lastname}">undefined</td>
                                     <td>
                                         <a th:href="@{'/maincompany/' + ${maincompany.id}}" class="btn-floating btn-small waves-effect waves-light">
                                             <i class="material-icons">visibility</i>
@@ -31,6 +31,7 @@
                                         <a th:href="@{'/maincompany/' + ${maincompany.id}}" class="btn-floating btn-small waves-effect waves-light">
                                             <i class="material-icons">edit</i>
                                         </a>
+                                        <a class="waves-effect waves-light btn modal-trigger" th:href="'#modal1' + ${maincompany.id}">Modal</a>
                                     </td>
                             </tr>
                     </tbody>
@@ -45,6 +46,17 @@
         </a>
     </div>
     <!-- end Add button-->
+    <!-- Modal Structure -->
+    <div id="modal1" class="modal">
+        <div class="modal-content">
+            <h4>Deleting Main Company ...</h4>
+            <p>Are you sure you want to delete this main company ?</p>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
+        </div>
+    </div>
+    <!-- End Modal-->
 </main>
 
 <div th:replace="common/footer :: footer"></div>
