Managing date for project (insert), checking how to render it with #temporals

--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -64,7 +64,7 @@
                     <div class="collapsible-body">
                         <ul>
                             <li class="sub-menu"><a th:href="@{/project/}">All</a></li>
-                            <li class="sub-menu"><a href="#!">Find one</a></li>
+                            <li class="sub-menu"><a th:href="@{/project/add/}">Add</a></li>
                         </ul>
                     </div>
                 </li>
