--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -14,6 +14,7 @@
                     <thead>
                     <tr>
                         <th>ID</th>
+                        <th>Name</th>
                         <th>Begin date</th>
                         <th>End Date</th>
                         <th>Manager</th>
@@ -24,9 +25,11 @@
                     <tbody>
                     <tr th:each="project : ${projects}">
                         <td th:text="${project.id}">undefined</td>
-                        <td th:text="${project.beginDate}">undefined</td>
+                        <td th:text="${project.name}">undefined</td>
+                        <td th:text="${#temporals.format(project.beginDate,'dd/MMM/yyyy')}">undefined</td>
+                        <td th:text="${project.endDate}">undefined</td>
                         <td th:text="${project.manager.firstname} + ' ' + ${project.manager.lastname}">undefined</td>
-                        <td th:text="${project.company}">undefined</td>
+                        <td th:text="${project.company.name}">undefined</td>
                         <td>
                             <a th:href="@{'/project/' + ${project.id}}" class="btn-floating btn-small waves-effect waves-light">
                                 <i class="material-icons">visibility</i>
