--- a/src/main/resources/templates/viewProject.html
+++ b/src/main/resources/templates/viewProject.html
@@ -1,10 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<div th:replace="common/head :: head"></div>
+<div th:replace="common/header :: header"></div>
+<main>
+    <div class="row">
+        <div class="col l12 m12 s12">
+            <div class="panel6">
+                <div class="panel_title">
+                    <h1>Company <span th:text="${project.name}"></span></h1>
+                </div>
+                This page is a particular project
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col l6 m6 s12">
+            <div class="panel6">
+                <div class="panel_title">
+                    <h2>Manager</h2>
+                </div>
+                Name: <span th:text="${project.manager.lastname}"></span> <span th:text="${project.manager.firstname}"></span><br/>
+                Email: <a th:href="'mailto:' + (${project.manager.email})"><span th:text="${project.manager.email}"></span> </a>
+            </div>
+        </div>
+        <div class="col l6 m6 s12">
+            <div class="panel6">
+                <div class="panel_title">
+                    <h2>Company</h2>
+                </div>
+                Name: <span th:text="${project.company.name}"></span><br/>
+                Manager : <span th:text="${project.company.manager.lastname}"></span> <span th:text="${project.company.manager.firstname}"></span><br/>
+                Email: <a th:href="'mailto:' + (${project.company.manager.email})"><span th:text="${project.company.manager.email}"></span> </a>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col l12 m12 s12">
+            <div class="panel6">
+                <div class="panel_title">
+                    <h2>Plots</h2>
+                </div>
+                <p>This plots belongs to <span th:text="${project.name}"></span> </p>
+                <table class="bordered highlight responsive-table">
+                    <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Manager</th>
+                        <th>Actions</th>
+                    </tr>
+                    </thead>
+                    <!--<tbody>
+                    <tr th:each="project : ${company.projects}">
+                        <td th:text="${project.id}">undefined</td>
+                        <td th:text="${project.name}">undefined</td>
+                        <td th:text="${project.manager.firstname} + ' ' + ${project.manager.lastname}">undefined</td>
+                        <td>
+                            <a th:href="@{'/project/' + ${project.id}}" class="btn-floating btn-small waves-effect waves-light">
+                                <i class="material-icons">visibility</i>
+                            </a>
+                            <a th:href="@{'/project/' + ${project.id}}" class="btn-floating btn-small waves-effect waves-light">
+                                <i class="material-icons">edit</i>
+                            </a>
+                        </td>
+                    </tr>
+                    </tbody>-->
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col l12 m12 s12">
+            <div class="panel6">
+                <div class="panel_title">
+                    <h2>Plots</h2>
+                </div>
+            </div>
 
-</body>
+        </div>
+    </div>
+    <!--Add button-->
+    <div class="fixed-action-btn horizontal">
+        <a th:href="@{/project/add/}" class="btn-floating btn-large waves-effect waves-light">
+            <i class="material-icons">add</i>
+        </a>
+    </div>
+    <!-- end Add button-->
+</main>
+
+<div th:replace="common/footer :: footer"></div>
 </html>
