--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -83,7 +83,13 @@ nav {
     margin: 5px 0 6px;
     display: block;
 }
-
+.map-panel {
+    height: 400px;
+}
+#map {
+    height: 400px;
+    width: 100%;
+}
 @media only screen and (max-width : 992px) {
     header, main, footer {
         padding-left: 0;
