Fixing and configuring Jackson bidirectionnal relationships with Jackson --> has to be applied to all entities

--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -17,9 +17,11 @@
     </nav>
 
     <ul id="slide-out" class="side-nav fixed">
-        <div id="logo">
-            <!--<img src="assets/img/logo_12Tree_resize.jpg">-->
-        </div>
+        <a th:href="@{/}">
+            <div id="logo">
+                <!--<img src="assets/img/logo_12Tree_resize.jpg">-->
+            </div>
+        </a>
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">search</i>
@@ -31,7 +33,7 @@
         <li class="bold">
             <ul class="collapsible collapsible-accordion">
                 <li>
-                    <a class="collapsible-header" ><i class="petite material-icons">business</i>Main Companies<i class="material-icons right extend-menu">arrow_drop_down</i></a>
+                    <a class="collapsible-header"><i class="petite material-icons">business</i>Main Companies<i class="material-icons right extend-menu">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
                             <li class="sub-menu"><a th:href="@{/maincompany/}">All</a></li>
@@ -45,7 +47,7 @@
         <li class="bold">
             <ul class="collapsible collapsible-accordion">
                 <li>
-                    <a class="collapsible-header" href="#"><i class="petite material-icons">business</i>Companies<i class="material-icons right">arrow_drop_down</i></a>
+                    <a class="collapsible-header"><i class="petite material-icons">business</i>Companies<i class="material-icons right">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
                             <li class="sub-menu"><a th:href="@{/company/}">All</a></li>
@@ -60,7 +62,7 @@
         <li class="bold">
             <ul class="collapsible collapsible-accordion">
                 <li>
-                    <a class="collapsible-header" href="#"><i class="petite material-icons">work</i>Projects<i class="material-icons right">arrow_drop_down</i></a>
+                    <a class="collapsible-header"><i class="petite material-icons">work</i>Projects<i class="material-icons right">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
                             <li class="sub-menu"><a th:href="@{/project/}">All</a></li>
@@ -75,7 +77,7 @@
         <li class="bold">
             <ul class="collapsible collapsible-accordion">
                 <li>
-                    <a class="collapsible-header" href="#"><i class="petite material-icons">business</i>Plots<i class="material-icons right">arrow_drop_down</i></a>
+                    <a class="collapsible-header"><i class="petite material-icons">business</i>Plots<i class="material-icons right">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
                             <li class="sub-menu"><a href="#!">Check All</a></li>
@@ -90,7 +92,7 @@
         <li class="bold">
             <ul class="collapsible collapsible-accordion">
                 <li>
-                    <a class="collapsible-header" href="#"><i class="petite material-icons">shopping_cart</i>Sales<i class="material-icons right">arrow_drop_down</i></a>
+                    <a class="collapsible-header"><i class="petite material-icons">shopping_cart</i>Sales<i class="material-icons right">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
                             <li class="sub-menu"><a href="#!">Check All</a></li>
@@ -105,7 +107,7 @@
         <li class="bold">
             <ul class="collapsible collapsible-accordion">
                 <li>
-                    <a class="collapsible-header" href="#"><i class="petite material-icons">swap_calls</i>Harvests<i class="material-icons right">arrow_drop_down</i></a>
+                    <a class="collapsible-header"><i class="petite material-icons">swap_calls</i>Harvests<i class="material-icons right">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
                             <li class="sub-menu"><a href="#!">Check All</a></li>
@@ -120,7 +122,7 @@
         <li class="bold">
             <ul class="collapsible collapsible-accordion">
                 <li>
-                    <a class="collapsible-header" href="#"><i class="petite material-icons">report_problem</i>Alerts<i class="material-icons right">arrow_drop_down</i></a>
+                    <a class="collapsible-header"><i class="petite material-icons">report_problem</i>Alerts<i class="material-icons right">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
                             <li class="sub-menu"><a href="#!">Check All</a></li>
@@ -135,7 +137,7 @@
         <li class="bold">
             <ul class="collapsible collapsible-accordion">
                 <li>
-                    <a class="collapsible-header" href="#"><i class="petite material-icons">supervisor_account</i>Users<i class="material-icons right">arrow_drop_down</i></a>
+                    <a class="collapsible-header"><i class="petite material-icons">supervisor_account</i>Users<i class="material-icons right">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
                             <li class="sub-menu"><a href="#!">Check All</a></li>
