--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,24 @@
 <div th:replace="common/head :: head"></div>
 <div th:replace="common/header :: header"></div>
 <main>
-    test
+    <div class="row">
+        <div class="col l12 m12 s12">
+            <div class="panel6">
+                <div class="panel_title">
+                    <h2>Plots</h2>
+                </div>
+                <div class="map-panel">
+                    <div id="map"></div>
+                </div>
+                <!-- Un test de map -->
+                <script th:inline="javascript">
+                    var plots = /*[[${plots}]]*/ '';
+                </script>
+                <div th:replace="common/map :: map"></div>
+                <!-- Un test deux -->
+            </div>
+        </div>
+    </div>
 </main>
 
 <div th:replace="common/footer :: footer"></div>
