Formating map. Problem: Thymeleaf seems to not close connection...

--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -80,8 +80,8 @@
                     <a class="collapsible-header"><i class="petite material-icons">business</i>Plots<i class="material-icons right">arrow_drop_down</i></a>
                     <div class="collapsible-body">
                         <ul>
-                            <li class="sub-menu"><a href="#!">Check All</a></li>
-                            <li class="sub-menu"><a href="#!">Find one</a></li>
+                            <li class="sub-menu"><a th:href="@{/plot/}">All</a></li>
+                            <li class="sub-menu"><a th:href="@{/plot/add/}">Add</a></li>
                         </ul>
                     </div>
                 </li>
