--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -86,10 +86,59 @@ nav {
 .map-panel {
     height: 400px;
 }
+/*Google Map*/
 #map {
     height: 400px;
     width: 100%;
 }
+.gm-style-iw {
+    top: 15px !important;
+    left: 0px !important;
+    background-color: #fff;
+}
+.gm-window {
+    margin-bottom: 10px;
+}
+.gm-window .gm-window-title {
+    font-size: 22px;
+    font-weight: 400;
+    padding: 10px;
+    background-color: #2A3F54;
+    color: white;
+    margin: 0;
+    border-radius: 2px 2px 0 0;
+}
+.gm-window .gm-window-content {
+    font-size: 13px;
+    line-height: 18px;
+    font-weight: 400;
+    margin-right: 1px;
+    padding: 15px 5px 20px 15px;
+    max-height: 140px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+.gm-window-content img {
+    float: right;
+    margin: 0 5px 5px 10px;
+}
+.gm-window-subTitle {
+    font-size: 16px;
+    font-weight: 700;
+    padding: 5px 0;
+}
+.gm-window-bottom-gradient {
+    position: absolute;
+    width: 326px;
+    height: 25px;
+    bottom: 10px;
+    right: 18px;
+    background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+    background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+    background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+    background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%);
+}
+
 @media only screen and (max-width : 992px) {
     header, main, footer {
         padding-left: 0;
