--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -31,10 +31,10 @@
                         <td th:text="${project.manager.firstname} + ' ' + ${project.manager.lastname}">undefined</td>
                         <td th:text="${project.company.name}">undefined</td>
                         <td>
-                            <a th:href="@{'/project/' + ${project.id}}" class="btn-floating btn-small waves-effect waves-light">
+                            <a th:href="@{'/project/view/' + ${project.id}}" class="btn-floating btn-small waves-effect waves-light">
                                 <i class="material-icons">visibility</i>
                             </a>
-                            <a th:href="@{'/project/' + ${project.id}}" class="btn-floating btn-small waves-effect waves-light">
+                            <a th:href="@{'/project/view/' + ${project.id}}" class="btn-floating btn-small waves-effect waves-light">
                                 <i class="material-icons">edit</i>
                             </a>
                             <a class="waves-effect waves-light btn modal-trigger" th:href="'#modal1' + ${project.id}">Modal</a>
