--- a/src/main/resources/templates/common/map.html
+++ b/src/main/resources/templates/common/map.html
@@ -17,7 +17,7 @@
                 var marker = new google.maps.Marker({
                     position: latlng,
                     map: map,
-                    icon: '../../assets/img/tree-2-32.png'
+                    icon: '/assets/img/tree-2-32.png'
                 });
                 google.maps.event.addListener(marker, 'click', (function(marker, i) {
 
