--- a/src/main/resources/templates/viewHarvestByEntity.html
+++ b/src/main/resources/templates/viewHarvestByEntity.html
@@ -4,18 +4,16 @@
 <div th:replace="common/head :: head"></div>
 <div th:replace="common/header :: header"></div>
 <main>
+    <div th:replace="common/headerMainCompany :: headerMainCompany"></div>
     <div class="row">
-        <div class="col l12 m12 s12">
+        <div class="col l6 m12 s12">
             <div class="panel6">
                 <div class="panel_title">
-                    <h2>Plots</h2>
+                    <h2>Wood</h2>
                 </div>
                 <div class="map-panel">
                     <div id="wind-speed"></div>
                 </div>
-
-                <!--<div th:replace="common/map :: map"></div>-->
-                <!-- Un test deux -->
             </div>
         </div>
     </div>
