--- a/src/main/resources/templates/viewHarvestByEntity.html
+++ b/src/main/resources/templates/viewHarvestByEntity.html
@@ -6,27 +6,41 @@
 <main>
     <div th:replace="common/headerMainCompany :: headerMainCompany"></div>
     <div class="row">
-        <div class="col l6 m12 s12">
+        <div class="col l12 m12 s12">
             <div class="panel6">
                 <div class="panel_title">
                     <h2>Wood</h2>
                 </div>
                 <div class="map-panel">
-                    <div id="wind-speed"></div>
+                    <div id="wood-sum-harvest"></div>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="row">
+        <div class="col l12 m12 s12">
+            <div class="panel6">
+                <div class="panel_title">
+                    <h2>Alimentary</h2>
+                </div>
+                <div class="map-panel">
+                    <div id="cocoa-sum-harvest"></div>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 </main>
 
 <div th:replace="common/footer :: footer"></div>
 <!-- Un test de map -->
 <script th:inline="javascript">
-    var graph = /*[[${myGraphData}]]*/ '';
-    console.log(graph);
-    var figure = JSON.parse(/*[[${myGraphData}]]*/);
-
-    Plotly.newPlot('wind-speed', figure.data, figure.layout);
+    var graphWood = /*[[${myGraphDataWood}]]*/ '';
+    var figureWood = JSON.parse(/*[[${myGraphDataWood}]]*/);
+    var figureCocoa = JSON.parse(/*[[${myGraphDataCocoa}]]*/);
+    Plotly.newPlot('wood-sum-harvest', figureWood.data, figureWood.layout);
+    console.log(figureWood);
+    Plotly.newPlot('cocoa-sum-harvest', figureCocoa.data, figureCocoa.layout);
 </script>
 <!--<div th:replace="common/map :: map"></div>-->
 </html>
